有招Saas平台开发

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li>
                     <div class="circle"></div>
                     <h4>
-                        <span>有招网站后台开发 -- 实习项目</span>
+                        <span>有招SaaS平台开发 -- 实习项目</span>
                         <a href="https://youzhao.io/" target="_blank"><i class="icon-link"></i>产品官网</a>
                     </h4>
                     <p><b style="font-size: large; color: #f25d8e">S:</b> 基于 Spring Boot 技术栈，多租户架构的新一代招聘管理系统</p>
