--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>樊东方的个人简历</title>
+    <title>王二狗的个人简历</title>
     <meta name="description" content="hire me">
-    <meta name="keywords" content="easter,java,工作,简历">
+    <meta name="keywords" content="java,工作,简历">
     <link rel="shortcut icon" href="favicon.jpg">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link rel="stylesheet" href="dist/css/fontello.min.css">
@@ -31,7 +31,7 @@
 <div class="container">
     <div class="sidebar">
         <div class="title">
-            <img src="img/me.jpg" data-action="zoom">
+            <img src="img/me.jpeg" data-action="zoom">
             <h2>干杯</h2>
         </div>
 
@@ -40,18 +40,19 @@
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>基本信息</dt>
                 <dd><i class="icon-phone-1"></i>本科</dd>
-                <dd><i class="icon-mail-alt"></i>信息管理与信息系统</dd>
-                <dd><i class="icon-wechat"></i>武汉纺织大学</dd>
+                <dd><i class="icon-mail-alt"></i>太阳学院</dd>
+                <dd><i class="icon-wechat"></i>银河系大学</dd>
                 <dd><i class="icon-qq"></i>2019.6</dd>
             </li>
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>联系方式</dt>
-                <dd><i class="icon-phone-1"></i>TG : <a href="https://t.me/easterfan">easter</a></dd>
-                <dd><i class="icon-mail-alt"></i>Mail : <a href="mailto:easter_wy@163.com" target="_blank">easter_wy@163.com</a>
+                <dd><i class="icon-phone-1"></i>TG : <a href="https://t.me/easterfan">xxxx</a></dd>
+                <dd><i class="icon-mail-alt"></i>Mail : <a href="mailto:xxx@xxx.com" target="_blank">xxx@xxx.com</a>
                 </dd>
-                <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=306578968&site=qq&menu=yes"
-                                                  target="_blank">3081703698</a></dd>
-                <dd><i class="icon-wechat"></i>Blog : <a href="https://easterland.me/">https://easterland.me/</a></dd>
+                <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=xxxxxxx&site=qq&menu=yes"
+                                                  target="_blank">xxxxxxx</a></dd>
+                <dd><i class="icon-wechat"></i>Blog : <a href="https://xxxxxxx.me/">https://xxxxxxx.me/</a></dd>
+                <dd><i class="icon-wechat"></i>Tel : xxxxxxx</dd>
             </li>
 
             <li class="someRight">
@@ -69,9 +70,8 @@
 
     </div>
     <div class="main">
-        <!--<a href="http://easterland.me">-->
         <!--<img style="position: absolute; top: 0; right: 0; border: 0;" src="img/hire_me_now.jpeg"></a>-->
-        <p style="font-size: 38px;line-height:55px">樊东方</p>
+        <p style="font-size: 38px;line-height:55px">王二狗</p>
         <p style="font-size: 18px;margin-bottom: 30px;color: rgba(0,0,0,.8)">求职意向: JavaWeb 后端开发</p>
         <ul class="main-info">
 
@@ -98,7 +98,7 @@
                     <div class="circle"></div>
                     <h4>
                         <span>基于 Springboot 的校园商铺平台 -- 毕业设计</span>
-                        <a href="https://github.com/EasterFan/o2o" target="_blank"><i class="icon-link"></i>2019年4月上线</a>
+                        <a href="https://github.com/xxx/o2o" target="_blank"><i class="icon-link"></i>2019年4月上线</a>
                     </h4>
                     <p>我的技术栈：</p>
                     <p>构建工具：Gradle</p>
@@ -111,8 +111,7 @@
                     <p>编辑器：intellij idea / atom</p>
                     <p>服务器 / 域名：DigitalOcean / NameCheap</p>
                     <p>我的两份实习经历均是在新型互联网公司，使我了解软件开发最前沿的技术和思想（测试驱动 / 持续交付），让我在毕业初期感受互联网氛围，也让我更加明确自己的职业方向</p>
-                    <p>我依然在持续打磨我的技术栈，现在贴出来不是为了吹嘘什么，而是想让面试官知道我正在做什么，我想要做什么</p>
-                    <p>希望能引起面试官的共鸣</p>
+                    <p>我依然在持续打磨我的技术栈，现在贴出来不是为了吹嘘什么，而是想让面试官知道我正在做什么，我想要做什么</p>          
                 </li>
             </ul>
             <li>
@@ -185,7 +184,7 @@
     </div>
 </div>
 <footer>
-    <p><a href="Java服务端方向开发岗+樊东方+武汉纺织大学+2019届.pdf" target="_blank">喜欢她</a><span id="busuanzi_container_page_pv">，<span id="busuanzi_value_page_pv"></span>遍</span></p>
+    <p><a href="Java服务端方向开发岗+王二狗+银河系大学+2019届.pdf" target="_blank">喜欢他</a><span id="busuanzi_container_page_pv">，<span id="busuanzi_value_page_pv"></span>遍</span></p>
 
 </footer>
 <script src="lib/zoom.min.js"></script>
